--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Layout Editor</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link data-trunk rel="icon" href="favicon.svg" />
     <link data-trunk rel="sass" href="index.scss" />
   </head>
   <body></body>
